# Luban

./: .gitignore  .travis.yml  DESCRIPTION.md  LICENSE  README-EN.md  README.md  README_EN.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
Translation/: README-EN.md
app/: build.gradle.kts
app-java/: build.gradle.kts
app-java/src/main/: AndroidManifest.xml
app-java/src/main/res/layout/: activity_main.xml
app-java/src/main/res/values/: strings.xml  themes.xml
app-java/src/main/res/values-night/: themes.xml
app-java/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/androidTest/java/top/zibin/luban/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/top/zibin/luban/app/: MainActivity.kt  MainViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
example/: build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/assets/: img_2
example/src/main/res/layout/: activity_main.xml  content_main.xml  item_image.xml
example/src/main/res/menu/: menu_main.xml
example/src/main/res/values/: strings.xml  styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
luban/: build.gradle.kts  consumer-rules.pro
luban/src/androidTest/java/top/zibin/luban/: ExampleInstrumentedTest.kt
luban/src/main/cpp/: CMakeLists.txt  turbojpeg_wrapper.cpp
luban/src/main/java/top/zibin/luban/api/: Luban.kt  (+3 more)
luban/src/test/java/top/zibin/luban/: CompressionCalculatorTest.kt  ExampleUnitTest.kt
(+19 files in other folders)
